--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ div2 {
 
   <!-- This Google map needs to be down here. -->
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtkY85H-BxaOyyi-NPria0F629jQpH6a8&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=Enter key here=initMap">
 </script>
 
 </body>
