new pagination, new logo, new menu

--- a/carousel.html
+++ b/carousel.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <title>Bootstrap Example</title>
+
+<!--  //  Name: Tommy Cao
+      //  Date: 6/10/13
+      //  Company: GEVH
+      //  Description: Great Entertainment Vacation Rental Website -->
+  
+  <title>Great Entertainment Vacation Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
