--- a/input-form.html
+++ b/input-form.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Great Entertainment Vacation Home</title>
+ 
+<!--  //  Name: Tommy Cao
+      //  Date: 6/10/13
+      //  Company: GEVH
+      //  Description: Great Entertainment Vacation Rental Website -->
+ 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>    
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: rgb(192, 192, 192);">
-        <a href="#" class="navbar-brand"><img src="./images/logo8.gif"></a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse5">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarCollapse5">
-            <form class="form-inline ml-auto">
-            <a class="btn btn-outline-secondary" href="index.html" role="button">Home</a>
-            <a class="btn btn-outline-secondary" href="login.html" role="button">Login</a>
-            </form>
-            <!-- <form class="form-inline ml-auto">
-                <input type="text" class="form-control mr-sm-2" placeholder="Search">
-                <button type="submit" class="btn btn-outline-light">Search</button>
-            </form> -->
-        </div>
-    </nav>  
+        <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #2780E3;">
+                <a href="#" class="navbar-brand"><img src="./images/logo14.gif"></a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse5">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarCollapse5">
+                  <form class="form-inline ml-auto">
+                    <a class="btn btn-outline-secondary" href="index.html" role="button">Home</a>        
+                    <a class="btn btn-outline-secondary" href="about.html" role="button">About</a>
+                    <a class="btn btn-outline-secondary" href="submitReview.html" role="button">Submit Review</a>
+                  </form>
+                </div>
+              </nav>
 
     <div class="container">
         <br/>
@@ -80,15 +83,7 @@
             <input type="text" class="form-control" id="inputZip">
             </div>
         </div>
-        <div class="form-group">
-            <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-                Check me out
-            </label>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-outline-secondary">Sign in</button>
+        <button type="submit" class="btn btn-outline-secondary">Book</button>
     </form> 
     </div>
 </br>
