--- a/carousel.html
+++ b/carousel.html
@@ -28,7 +28,21 @@
   </style>
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #2780E3;">
+        <a href="index.html" class="navbar-brand"><img src="./images/logo16.gif"></a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse5">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarCollapse5">
+            <form class="form-inline ml-auto">
+            <a class="btn btn-outline-light text-light" href="index.html" role="button">Home</a>        
+            <a class="btn btn-outline-light text-light" href="about.html" role="button">About</a>
+            <a class="btn btn-outline-light text-light" href="submitReview.html" role="button">Submit Review</a>
+            </form>
+        </div>
+    </nav>
+    
 <div class="container mt-3">
   <!-- <a href="index.html" class="btn btn-outline-secondary" role="button">Return</a> -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
