--- a/about.html
+++ b/about.html
@@ -1,234 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<!-- Name: Tommy Cao
+     Date: 11/10/19
+     Company: GEVH
+     Description: Responsive Portfolio Website - Sass Workflow -->
+
 <head>
-  
-<!--  //  Name: Tommy Cao
-      //  Date: 6/10/13
-      //  Company: GEVH
-      //  Description: Great Entertainment Vacation Rental Website -->
-  
-  <title>Great Entertainment Vacation Home</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
 
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">
-  <!-- <script src="https://kit.fontawesome.com/cc682b11a6.js" crossorigin="anonymous"></script> -->
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
-
-  
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-
-  <!-- Latest Bootstrap 4 version erase the menu bar -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
-  <!-- <link href="./style.css"> -->
-
-  <!-- For Calendar -->
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-<style>
-html {  /* This will not work if put in the style.css file */
-  scroll-behavior: smooth;
-}
-
-body {
-  position: relative; 
-}
-
-#Sect1-overview {padding-top:50px; color: rgb(32, 32, 32); }
-#Sect2-amenities {padding-top:50px; color: rgb(32, 32, 32); }
-#Sect3-reviews {padding-top:50px; color: rgb(32, 32, 32); }
-#Sect4-map {padding-top:50px; color: rgb(32, 32, 32); }
-#Sect5-availability {padding-top:50px; color: rgb(32, 32, 32); }
-
-div2 {
-  display: inline;
-}
-
-.ui-datepicker {
-  font-size: 1.6em;
-  }
-  
-#Mymap{
-  height:400px;
-  width:100%;
-}
-
-#availableDiv{
-  height:auto;
-  width:100%;
-}
-
-#checkInDate{
-  height:auto;
-  width:100%;
-}
-#checkOutDate{
-  height:auto;
-  width:100%;
-}
-
-#more {display: none;}
-
-#more2 {display: none;}
-
-/* change the background color */
-.navbar-custom {
-  background-color: #343440  /* #464545; */
-}
-/* change the brand and text color */
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-text {
-  color: #ffffff;
-  padding: 0.8rem 1rem;
-}
-
-/* change the link color and add padding for height */
-.navbar-custom .navbar-nav .nav-link {
-  color: rgba(255,255,255,.33);
-  padding: 1rem 1rem;
-}
-
-/* change the color of active or hovered links */
-.navbar-custom .nav-item.active .nav-link,
-.navbar-custom .nav-item:hover .nav-link {
-  color: #ffffff;
-  background-color: #000000/*#110f0f;  add background-color to active links */
-}
-
-  @media screen and (max-width: 970px) {
-    .ui-datepicker  { font-size: .7em;}
-  }
-
-</style>
+  <link rel="stylesheet" href="css/main.css">
+  <title>About Me</title>
 </head>
-<body data-spy="scroll" data-offset="50">  
-    <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #2780E3;">
-        <a href="#" class="navbar-brand"><img src="./images/logo14.gif"></a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse5">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse" id="navbarCollapse5">
-          <form class="form-inline ml-auto">
-            <a class="btn btn-outline-secondary" href="index.html" role="button">Home</a>        
-            <a class="btn btn-outline-secondary active" href="about.html" role="button">About</a>
-            <a class="btn btn-outline-secondary" href="submitReview.html" role="button">Submit Review</a>
-          </form>
-        </div>
-      </nav>
 
-  <div class="container-fluid">
-    <div class="row ">
-        <div class="col-md-5">
-            <!-- Top -->
-            <div class="profile-top bg-primary p-2">
-                <img
-                  class="rounded mx-auto d-block"
-                  src="./images/TommyAvatar.jpg"
-                  alt=""/>
-                <br/>
-                <h1 class="large">Tommy Cao</h1>
-                <p class="lead">Web Developer</p>
-                <p class="lead">Vacation Rental Owner</p>
-                <p class="lead">Anaheim, CA</p>
-                <!-- <div class="icons my-1">
-                  <a href="#">
-                    <i class="fas fa-star"></i>
-                  </a>
-                  <a href="#">
-                    <i class="fas fa-facebook fa-2x"></i>
-                  </a>
-                  <a href="#">
-                    <i class="fas fa-linkedin fa-2x"></i>
-                  </a>
-                  <a href="#">
-                    <i class="fas fa-instagram fa-2x"></i>
-                  </a>
-                </div> -->
-            </div>
+<body>
+  <header>
+    <div class="menu-btn">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
 
-                    <!-- About -->
-            <div class="profile-about bg-light p-2">
-                <h2 class="text-primary">Tommy's Bio</h2>
-                <p>
-                  Anaheim is our home for the past 15 years. We love our city and our neighboorhood; it is truly the happiest place on earth. 
-                  This city and this home is the place where our dreams became reality and where the greatest memories of our lives made imprints on our soul.
-                </p>
-                <h2 class="text-primary"></h2>
-                <div class="skills">
-                  <p class="p-1"><i class="fas fa-check"></i> Private Pool</p>
-                  <p class="p-1"><i class="fas fa-check"></i> Hot Tub</p>
-                  <p class="p-1"><i class="fas fa-check"></i> Satellite TV in all rooms</p>
-                  <p class="p-1"><i class="fas fa-check"></i> Game room</p>
-                </div>
-            </div>
+    <nav class="menu">
+      <div class="menu-branding">
+        <div class="portrait"></div>
+      </div>
+      <ul class="menu-nav">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">
+            Home
+          </a>
+        </li>
+        <li class="nav-item current">
+          <a href="about.html" class="nav-link">
+            About Me
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="work.html" class="nav-link">
+            My Work
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link">
+            How To Reach Me
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-            <!-- Experience -->
-            <div class="profile-exp bg-white p-2">
-                <p>
-                <strong>Why Tommy chose this house </strong>This cute house has everything you need to enjoy the vacation of a lifetime. 
-                A very private little compound and it'll take you less than 15 minutes to walk to Disneyland. 
-                You won't likely see any neighbors during your stay as this corner lot house is quite secluded and fenced in. 
-                Just bring your clothes, the kids and your food. We have everything else covered.
-                </p>
-            </div>
+  <main id="about">
+    <h1 class="lg-heading">
+      About<span class="text-secondary">
+        Me</span>
+    </h1>
+    <h2 class="sm-heading">
+      Let me tell you about myself...
+    </h2>
+    <div class="about-info">
+      <img src="img/Tommy.jpg" alt="Tommy Cao" class="bio-image">
 
-            <!-- Education -->
-            <div class="profile-edu bg-white p-2">
-                <p>
-                  <strong>Description: </strong>This house is just one mile away from the front gate of Disneyland.
-                </p>
-            </div>  
-            <hr>            
-        </div> <!-- col-md-5 -->
+      <div class="bio">
+        <h3 class="text-secondary">BIO</h3>
+        <p>Developed vacation rental website and ran the business successfully for 6 years.</p>
+        <p>Over 15 years of experience performing a full range of systems architecture, requirements, design, integration, test, and risk management.</p>
+      </div>
 
-        <div class="col-md-7">
-          <div class="container">
-            <h2>Ask A Question</h2>
-            <form name="review" method="POST" data-netlify="true">
-              <p>
-                <label>name<br>
-                <input type="text" name="reviewName" /></label>   
-              </p>
-              <p>
-                <label>email<br>
-                <input type="email" name="reviewEmail" /></label>
-              </p>
-              <p>
-                <label>phone<br>
-                <input type="text" name="reviewPhone" /></label>
-              </p>                
-              <p>
-                <label>what can I help ou with?<br>
-                <textarea name="reviewMessage"  rows="6" cols="60"></textarea></label>
-              </p>
-              <p>
-                <button type="submit">Send</button>
-                
-              </p>
-            </form>
-          </div>
-        </div> <!-- col-7 because col-9 is too big for iPad Safari Check In/Out inputs -->
-    </div> <!-- big row -->
-    </br>
-</div>
+      <div class="job job-1">
+        <h3>Education</h3>
+          <ul>
+            <li>M.S. Electrical and Computer Engineering,
+            Marquette University, Milwaukee, Wisconsin, 1990</li> 
+            <li>B.S. Electrical and Computer Engineering, 
+              University of Wisconsin - Madison, 1988</li> 
+          </ul>
+      </div>
 
-    <!-- FOOTER -->
-    <div class="container">
-            <p>Copyright &copy; 2019 | Great Entertainment Vacation Home</p>
-    </div>  
+      <div class="job job-2">
+        <h3>Languages</h3>
+          <ul>
+            <li>HTML5, CSS3</li>  
+            <li>JavaScript6, Node.js</li>
+            <li>Python, PHP</li>            
+            <li>Java</li>
+            <li>C/C++</li>            
+            <li>SQL</li>                  
+        </ul>
+      </div>
 
-<script src="https://kit.fontawesome.com/cc682b11a6.js" crossorigin="anonymous"></script>
+      <div class="job job-3">
+        <h3>Library/Frameworks</h3>
+          <ul>       
+            <li>ExpressJS, GraphQL</li>
+            <li>Bootstrap, Sass, Less, Materialize</li>  
+            <li>React.js/Redux, jQuery</li>                      
+            <li>Django, Flask</li>
+            <li>AJAX, JSON, NPM</li>                        
+          </ul>
+      </div>
 
+      <div class="job job-4">
+        <h3>Tools & Databases</h3>
+          <ul>       
+            <li>Chai, Mocha, Jest</li>
+            <li>GitHub, Gulp, Babel</li>
+            <li>MongoDB, PostgreSQL, CouchDB, mySQL</li>
+            <li>Postman</li>
+          <ul>      
+      </div>      
+    </div>
+  </main>
+
+  <footer id="main-footer">
+    Copyright &copy; 2019
+  </footer>
+
+  <script src="js/main.js"></script>
 </body>
+
 </html>
