Added Booking Feedback menu

--- a/carousel.html
+++ b/carousel.html
@@ -36,10 +36,11 @@
     
         <div class="collapse navbar-collapse" id="navbarCollapse5">
             <form class="form-inline ml-auto">
-            <a class="btn btn-outline-light text-light" href="index.html" role="button">Home</a>        
-            <a class="btn btn-outline-light text-light" href="about.html" role="button">About</a>
-            <a class="btn btn-outline-light text-light" href="submitReview.html" role="button">Submit Review</a>
-            </form>
+            <a class="btn btn-outline-light" href="index.html" role="button">Home</a>        
+            <a class="btn btn-outline-light" href="about.html" role="button">About</a>
+            <a class="btn btn-outline-light" href="http://gevh1.com" role="button">Rental Reviews</a>
+            <a class="btn btn-outline-light" href="https://gevh-booking-feedback.herokuapp.com" role="button">Booking Feedback</a>
+        </form>
         </div>
     </nav>
     
