Change to about.php and others.

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ body {
         <div class="collapse navbar-collapse" id="navbarCollapse5">
           <form class="form-inline ml-auto">
             <a class="btn btn-outline-light" href="index.html" role="button">Home</a>        
-            <a class="btn btn-outline-secondary active" href="about.html" role="button">About</a>
+            <a class="btn btn-outline-secondary active" href="about.php" role="button">About</a>
             <a class="btn btn-outline-light" href="http://gevh1.com" role="button">Rental Reviews</a>
             <a class="btn btn-outline-light" href="https://gevh-booking-feedback.herokuapp.com" role="button">Booking Feedback</a>
           </form>
@@ -96,14 +96,9 @@ body {
         <div class="col-md-6">
             <!-- Top -->
             <div class="profile-top bg-muted p-2">
-                <img
-                  class="rounded mx-auto d-block"
-                  src="./images/TommyAvatar.jpg"
-                  alt=""/>
                 <br/>
-                <h1 class="large">Tommy Cao</h1>
-                <p class="lead">Vacation Rental Owner</p>
-                <p class="lead">Anaheim, CA</p>
+                <h1 class="large">Anaheim, California</h1>
+                <p class="lead">The Happiest Place on Earth</p>
                 <!-- <div class="icons my-1">
                   <a href="#">
                     <i class="fas fa-star"></i>
@@ -121,11 +116,11 @@ body {
             </div>
 
                     <!-- About -->
-            <div class="profile-about bg-light p-2">
-                <h2 class="text-primary">Tommy's Bio</h2>
+              <div class="profile-about bg-light p-2">
+                <h2 class="text-primary">Owner's Bio</h2>
                 <p>
-                  Anaheim is our home for the past 15 years. We love our city and our neighboorhood; it is truly the happiest place on earth. 
-                  This city and this home is the place where our dreams became reality and where the greatest memories of our lives made imprints on our soul.
+                  We love Anaheim; it is truly the happiest place on earth. 
+                  This city and this home is the place where our dreams can become reality and where the greatest memories of our lives made imprints on our soul.
                 </p>
                 <h2 class="text-primary"></h2>
                 <div class="skills">
@@ -139,7 +134,7 @@ body {
             <!-- Why this house -->
             <div class="profile-exp bg-white p-2">
                 <p>
-                <strong>Why Tommy chose this house </strong>This cute house has everything you need to enjoy the vacation of a lifetime. 
+                <strong>Why we chose this house </strong>This cute house has everything you need to enjoy the vacation of a lifetime. 
                 A very private little compound and it'll take you less than 15 minutes to walk to Disneyland. 
                 You won't likely see any neighbors during your stay as this corner lot house is quite secluded and fenced in. 
                 Just bring your clothes, the kids and your food. We have everything else covered.
@@ -189,7 +184,7 @@ body {
 
     <!-- FOOTER -->
     <div class="container">
-            <p>Copyright &copy; 2019 | Great Entertainment Vacation Home</p>
+            <p class="text-center">Copyright &copy; 2020 | Great Entertainment Vacation Home</p>
     </div>  
 
 <script src="https://kit.fontawesome.com/cc682b11a6.js" crossorigin="anonymous"></script>
