--- a/carousel.html
+++ b/carousel.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse5">
             <form class="form-inline ml-auto">
             <a class="btn btn-outline-light" href="index.html" role="button">Home</a>        
-            <a class="btn btn-outline-light" href="about.html" role="button">About</a>
+            <a class="btn btn-outline-light" href="about.php" role="button">About</a>
             <a class="btn btn-outline-light" href="http://gevh1.com" role="button">Rental Reviews</a>
             <a class="btn btn-outline-light" href="https://gevh-booking-feedback.herokuapp.com" role="button">Booking Feedback</a>
         </form>
@@ -204,7 +204,15 @@
     </a>
     <a href="index.html" class="btn btn-outline-secondary float-right inline" role="button">Return</a>
   </div>
-  
 </div>
+
+<div class="container">
+    <div class="row center-xs center-sm center-md center-lg">
+      <div id = "footerDiv" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <p class="text-center">Copyright &copy; 2020 | Great Entertainment Vacation Home</p class="text-center">
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
