--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ p.response {
 
 #Sect1-overview {padding-top:50px; color: rgb(32, 32, 32); }
 #Sect2-amenities {padding-top:50px; color: rgb(32, 32, 32); }
-/* #Sect3-reviews {padding-top:50px; color: rgb(32, 32, 32); } */
+#Sect3-reviews {padding-top:50px; color: rgb(32, 32, 32); } */
 #Sect4-map {padding-top:50px; color: rgb(32, 32, 32); }
 #Sect5-availability {padding-top:50px; color: rgb(32, 32, 32); }
 
@@ -128,7 +128,7 @@ div2 {
       <form class="form-inline ml-auto">
         <a class="btn btn-outline-secondary active" href="index.html" role="button">Home</a>        
         <!-- <a class="btn btn-outline-dark" href="about.html" role="button">About</a> This is also pretty good -->
-        <a class="btn btn-outline-light" href="about.html" role="button">About</a>        
+        <a class="btn btn-outline-light" href="about.php" role="button">About</a>        
         <a class="btn btn-outline-light" href="http://gevh1.com" role="button">Rental Reviews</a>
         <a class="btn btn-outline-light" href="https://gevh-booking-feedback.herokuapp.com" role="button">Booking Feedback</a>
       </form>
@@ -164,9 +164,9 @@ div2 {
                   <br><input type="submit" id="submit1" class="btn btn-outline-secondary" value="Availability">
                 </div>
               </div> <!-- sub row -->  
-             </div> <!-- container-fluid      -->
+            </div> <!-- container-fluid      -->
           </form>
-         </div> <!-- list-item -->
+        </div> <!-- list-item -->
 
       <div class="list-item">
         <div class="container-fluid">
@@ -402,7 +402,7 @@ div2 {
               shower was inconsistent. But these were minor and livable. We would not hesitate to stay here again.</p>
             <p>Published Aug 10, 2019</p> 
             <br>
-            <h5 class = "response">Owner's Response:</h5>
+            <h5 class = "response">Manager's Response:</h5>
             <p class="response">Hello Mary Ann, Thank you for staying at my vacation home. We have put new bed sheets in the Master bedroom. 
               When there are 3 people showering at the same time, the water heater may have trouble keeping up with the demand. 
               We have set the water heater on the hottest setting so we will have continuous warm water flowing. Tommy</p>
@@ -426,7 +426,7 @@ div2 {
               We look forward to booking future stays!</p>
             <p>Published Mar 9, 2018</p>
             <br>
-            <h5 class = "response">Owner's Response:</h5>
+            <h5 class = "response">Manager's Response:</h5>
             <p class="response">Thank you for being guest at this rental. Your positive review of your stay encourages us to work harder to satisfy our 
               future guests. We look forward to serve again in the future.</p>
           </div>
@@ -445,7 +445,7 @@ div2 {
               and felt like a resort. Well stocked kitchen and the bedroom/bathroom situation was ideal. Can’t wait to stay here again!!</p>
             <p>Published Mar 18, 2019</p>
             <br>
-            <h5 class = "response">Owner's Response:</h5>
+            <h5 class = "response">Manager's Response:</h5>
             <p class="response">Hi Dee Dee, It was great to have you all stay at my vacation home.</p>
           </div>
             
@@ -462,7 +462,7 @@ div2 {
             <p>Lots of extras provided too</p>
             <p>Published Jul 18, 2018</p>
             <br>
-            <h5 class = "response">Owner's Response:</h5>
+            <h5 class = "response">Manager's Response:</h5>
             <p class="response">Thank you for your positive review. Come back again.</p>    
           </div>
 
@@ -479,7 +479,7 @@ div2 {
             <p>The home was in a perfect location close to shops, restaurants and Disney! Would definitely recommend to stay and will stay again!</p>
             <p>Published Mar 10, 2018</p>
             <br>
-            <h5 class = "response">Owner's Response:</h5>
+            <h5 class = "response">Manager's Response:</h5>
             <p class="response">Hi Oscar A., Thank you for your positive review. It was a pleasure having you as guest at my vacation home.</p> 
           </div>
 
@@ -498,7 +498,7 @@ div2 {
               access to I-5 made our trips to San Diego convenient. Great stay!</p>
             <p>Published Aug 1, 2017</p>
             <br>    
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">Thank you for posting a positive review of your stay at my vacation rental. I hope to see you again in the future.</p>     
           </div>
 
@@ -512,12 +512,12 @@ div2 {
             <span class="far fa-star"></span>		  
             <span>  Stayed Jun 2017</span>
             <p>Ellen H</p>
-            <p>We had 18 people staying in 1 house. Kids loved pool and hot tub. Clean and well maintained. Owner was easy to reach when we had questions. 
+            <p>We had 18 people staying in 1 house. Kids loved pool and hot tub. Clean and well maintained. Manager was easy to reach when we had questions. 
               ABSOLUTELY NO COMPLAINTS from us.We had 18 people staying in 1 house. Kids loved pool and hot tub. Clean and well maintained. 
-              Owner was easy to reach when we had questions. ABSOLUTELY NO COMPLAINTS from us.</p>
+              Manager was easy to reach when we had questions. ABSOLUTELY NO COMPLAINTS from us.</p>
             <p>Published Jul 19, 2017</p>
             <br>    
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">It's great to hear that you enjoyed your stay at my vacation rental.</p>     
           </div>
 
@@ -531,12 +531,12 @@ div2 {
             <span class="far fa-star"></span>		  
             <span>  Stayed Oct 2016</span>
             <p>Michelle B</p>
-            <p>Tommys house was very nice and clean. Great size for our large group. The only reason we didn't give a 5 star rating was 
+            <p>Tommy's house was very nice and clean. Great size for our large group. The only reason we didn't give a 5 star rating was 
               due to a neighbors dog that barked ALL NIGHT LONG. We realize this is not Tommys fault but if it wasn't for that it would 
               have been the perfect stay. Thank you Tommy.</p>
             <p>Published Nov 5, 2016</p>
             <br>
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">It was great to have you stayed at our vacation home. We look forward for your return.</p>   
           </div>
 
@@ -557,7 +557,7 @@ div2 {
                 It was close to everything, shopping, entertainment, beach... We would definitely consider this house in the future.</p>
               <p>Published Apr 20, 2016</p>
               <br>      
-              <h5 class="response">Owner's Response:</h5>
+              <h5 class="response">Manager's Response:</h5>
               <p class="response">Thank you Mary for staying at my vacation home.</p>    
           </div>
 
@@ -572,11 +572,11 @@ div2 {
             <span>  Stayed Mar 2015</span>
             <p>Lisa S.</p>
             <p>We were staying in the area for a family event. This house was able to accommodate 8 family members 
-              comfortably with room for more. We enjoyed the pool and backyard. The owner was helpful and attentive 
+              comfortably with room for more. We enjoyed the pool and backyard. The Manager was helpful and attentive 
               to our needs. The location is ideal for visits to many local attractions (Disneyland, Knott's Berry Farm).</p>
             <p>Published Apr 4, 2015</p>
             <br>
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">Thank you Lisa for a great review.  Please come back again.</p>
           </div>
 
@@ -605,7 +605,7 @@ div2 {
                 come again to this rental!!</p>
               <p>Published Dec 21, 2014</p>
               <br>
-              <h5 class="response">Owner's Response:</h5>
+              <h5 class="response">Manager's Response:</h5>
               <p class="response">Hi Priscilla, Thank you for the positive review of your stay at my vacation home. 
                 A new pool tarp has been replaced and the water temperature is very good for swimming. Looking forward 
                 to have you back in the future.</p>    
@@ -625,7 +625,7 @@ div2 {
               We even saw fireworks from Disneyland at the end of the road. Will definitely rent again when we go back.</p>
             <p>Published Nov 19, 2014</p>
             <br>
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">Hello Hanh, Thank you for your kind review of your stay at this house. 
               We work hard to provide the highest value for your money. We look forward for your to return to this house. Tommy</p>    
           </div>
@@ -644,13 +644,13 @@ div2 {
               Did have a minor issue with ants, and the kitchen could use an update/deep clean but overall it was worth the money.</p>
             <p>Published Aug 1, 2014</p>
             <br>
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">We sprayed underneath the house so there is no more ants at the house. 
               We have also done a deep clean of the kitchen cabinets.</p>    
           </div>
 
           <div class="list-item">
-            <h5>Everything as mentioned in the description and great communication with owner!</h5>
+            <h5>Everything as mentioned in the description and great communication with Manager!</h5>
             <span>5/5</span>
             <span class="fas fa-star"></span>
             <span class="fas fa-star"></span>
@@ -665,7 +665,7 @@ div2 {
               but after contacting Tommy, it was fixed the next day. Would definitely stay here again, thank you Tommy!</p>
             <p>Published Dec 29, 2013</p>
             <br>
-            <h5 class="response">Owner's Response:</h5>
+            <h5 class="response">Manager's Response:</h5>
             <p class="response">Thank you Suzette for your positive review. It was a pleasure serving you.</p>    
           </div>
           
@@ -682,7 +682,7 @@ div2 {
               <p>Nice and big house</p>
               <p>Published Oct 1, 2013</p>
               <br>
-              <h5 class="response">Owner's Response:</h5>
+              <h5 class="response">Manager's Response:</h5>
               <p class="response">Thank you.</p>
             </div>    
         </div>
@@ -714,8 +714,11 @@ div2 {
   <div id="Sect6-footer">
     <div class="container">
       <div class="row center-xs center-sm center-md center-lg">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <p>Copyright &copy; 2019 | Great Entertainment Vacation Home</p>
+        <div id = "footerDiv" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <p class="text-center">2301 W. Lincoln Ave, Suite 2301</p>
+          <p class="text-center">Anaheim, CA 92801</p>
+          <p class="text-center">Ph: 714-512-2681; Fax: 866-896-7010</p>
+          <p class="text-center">Copyright &copy; 2020 | Great Entertainment Vacation Home</p class="text-center">
         </div>
       </div>
     </div>
